--- a/residents.html
+++ b/residents.html
@@ -33,7 +33,7 @@
 
     <div class="recidents-introductions">
       <div class="recidents-introduction woman">
-        <img class ="recidents-img" src="img/mirako.png" width="200px" height="200px" alt="ミラコ">
+        <img class ="recidents-img" src="mirako.png" width="200px" height="200px" alt="ミラコ">
         <h3>ミラコ</h3>
         <p>性別：女の子</p>
         <p>誕生日：7月6日</p>
