--- a/residents.html
+++ b/residents.html
@@ -43,7 +43,7 @@
       </div>
 
       <div class="recidents-introduction man" >
-        <img src="img/norimaki.jpg"   width="200px" height="200px" alt="のりまき">
+        <img src="norimaki.jpg"   width="200px" height="200px" alt="のりまき">
         <h3>のりまき</h3>
         <p>性別：男の子</p>
         <p>誕生日：11月2日</p>
@@ -53,7 +53,7 @@
       </div>
 
       <div class="recidents-introduction woman" >
-        <img src="img/sara.png"  width="200px" height="200px" alt="サラ">
+        <img src="sara.png"  width="200px" height="200px" alt="サラ">
         <h3>サラ</h3>
         <p>性別：女の子</p>
         <p>誕生日：7月7日</p>
@@ -63,7 +63,7 @@
       </div>
 
       <div class="recidents-introduction man">
-        <img src="img/jack.jpg"   width="200px" height="200px" alt="ジャック">
+        <img src="jack.jpg"   width="200px" height="200px" alt="ジャック">
         <h3>ジャック</h3>
         <p>性別：男の子</p>
         <p>誕生日：10月1日</p>
@@ -73,7 +73,7 @@
       </div>
 
       <div class="recidents-introduction woman" >
-        <img src="img/ririan.jpg"  width="200px" height="200px" alt="リリアン">
+        <img src="ririan.jpg"  width="200px" height="200px" alt="リリアン">
         <h3>リリアン</h3>
         <p>性別：女の子</p>
         <p>誕生日：5月9日</p>
@@ -83,7 +83,7 @@
       </div>
 
       <div class="recidents-introduction man">
-        <img src="img/bon.jpg"   width="200px" height="200px" alt="ボン">
+        <img src="bon.jpg"   width="200px" height="200px" alt="ボン">
         <h3>ボン</h3>
         <p>性別：男の子</p>
         <p>誕生日：5月25日</p>
@@ -93,7 +93,7 @@
       </div>
 
       <div class="recidents-introduction woman" >
-        <img src="img/chitose.png"  width="200px" height="200px" alt="ちとせ">
+        <img src="chitose.png"  width="200px" height="200px" alt="ちとせ">
         <h3>ちとせ</h3>
         <p>性別：女の子</p>
         <p>誕生日：1月15日</p>
@@ -103,7 +103,7 @@
       </div>
 
       <div class="recidents-introduction man">
-        <img src="img/cyauyan.png"   width="200px" height="200px" alt="チャウヤン">
+        <img src="cyauyan.png"   width="200px" height="200px" alt="チャウヤン">
         <h3>チャウヤン</h3>
         <p>性別：男の子</p>
         <p>誕生日：7月22日</p>
@@ -113,7 +113,7 @@
       </div>
 
       <div class="recidents-introduction woman" >
-        <img src="img/doremi.png"  width="200px" height="200px" alt="ドレミ">
+        <img src="doremi.png"  width="200px" height="200px" alt="ドレミ">
         <h3>ドレミ</h3>
         <p>性別：女の子</p>
         <p>誕生日：3月26日</p>
@@ -123,7 +123,7 @@
       </div>
 
       <div class="recidents-introduction man">
-        <img src="img/tomson.png"   width="200px" height="200px" alt="トムソン">
+        <img src="tomson.png"   width="200px" height="200px" alt="トムソン">
         <h3>トムソン</h3>
         <p>性別：男の子</p>
         <p>誕生日：8月20日</p>
